objects/PC_Applicant__c.object
<CustomObject>
    <fields>
        <fullName>ACLS_Caregiver_Email__c</fullName>
        <label>Caregiver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACLS_Caregiver_Phone__c</fullName>
        <label>Caregiver Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Verification_Status1__c</fullName>
        <label>Verification Status 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Zip_Code_Extension1__c</fullName>
        <label>Zip Code Extension 1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACLS_Zip_Code_Extension__c</fullName>
        <label>Zip Code Extension</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The patient account created to represent the applicant.</description>
        <label>Patient Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PatientRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Address1_1__c</fullName>
        <description>The line one in patient’s second address.</description>
        <label>Address1 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address1_2__c</fullName>
        <description>The line two in patient’s second address.</description>
        <label>Address1 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address1_Description__c</fullName>
        <description>The address type of patient’s second address, such as Business or Home.</description>
        <label>Address1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Address_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Address_1__c</fullName>
        <description>The line one in patient’s first address.</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_Description__c</fullName>
        <description>The address type of patient’s first address, such as Business or Home.</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Adherence_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the patient has requested for adherence support</description>
        <label>Adherence Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_BIN_No__c</fullName>
        <description>The Rx Bank Identification Number (BIN) of the applicant.</description>
        <label>BIN No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_First_Name__c</fullName>
        <description>The first name of the patient’s caregiver.</description>
        <label>Caregiver First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Last_Name__c</fullName>
        <description>The last name of the patient’s caregiver.</description>
        <label>Caregiver Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Relationship_to_Patient__c</fullName>
        <description>The Caregiver&apos;s relationship to the patient.</description>
        <label>Caregiver Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Caregiver_Salutation__c</fullName>
        <description>The Caregiver&apos;s salutation such as Mr., Ms., Mrs., and Dr.</description>
        <label>Caregiver Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Salutation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_City1__c</fullName>
        <description>The city associated with patient’s second address.</description>
        <label>City1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_City__c</fullName>
        <description>The city associated with the patient’s address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Communication__c</fullName>
        <description>The communication language as selected by patient.</description>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Communication_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Country1__c</fullName>
        <description>The country associated with the patient’s second address.</description>
        <label>Country1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Country__c</fullName>
        <description>The country associated with the patient’s address.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Coverage_Type__c</fullName>
        <description>The type of coverage selected in the enrollment form.</description>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Funding</fullName>
                </value>
                <value>
                    <fullName>Private Coverage</fullName>
                </value>
                <value>
                    <fullName>Public Coverage</fullName>
                </value>
                <value>
                    <fullName>Copay Assistance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Date_of_Birth__c</fullName>
        <description>The date of birth of the patient.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Dosage_Date__c</fullName>
        <description>The Rx start date for the patient.</description>
        <label>Dosage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Dosage_Form__c</fullName>
        <description>The form of the prescribed medication.</description>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Form</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Dosage_Strength_Units__c</fullName>
        <description>The strength units of the prescribed medication.</description>
        <label>Dosage Strength Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Dosage_Strength__c</fullName>
        <description>The strength of the prescribed medication.</description>
        <label>Dosage Strength</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Engagement_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The engagement program associated with the specific applicant.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Enrollment_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Applicants’ enrollment case.</description>
        <label>Enrollment Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Every__c</fullName>
        <description>States if the dosage should be taken daily or weekly.</description>
        <label>Every</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>2 Days</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Weeks</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_First_Name__c</fullName>
        <description>The first name of the patient.</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Frequency__c</fullName>
        <description>The frequency of the dosage</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1x</fullName>
                </value>
                <value>
                    <fullName>2x</fullName>
                </value>
                <value>
                    <fullName>3x</fullName>
                </value>
                <value>
                    <fullName>4x</fullName>
                </value>
                <value>
                    <fullName>5x</fullName>
                </value>
                <value>
                    <fullName>6x</fullName>
                </value>
                <value>
                    <fullName>7x</fullName>
                </value>
                <value>
                    <fullName>8x</fullName>
                </value>
                <value>
                    <fullName>9x</fullName>
                </value>
                <value>
                    <fullName>10x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Gender__c</fullName>
        <description>The gender of the patient.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HCO1_City__c</fullName>
        <description>The city associated with the second HCO’s address.</description>
        <label>HCO1 City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_Fax__c</fullName>
        <description>The fax number of the second HCO.</description>
        <label>HCO1 Fax</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_Name__c</fullName>
        <description>The full name of the second HCO.</description>
        <label>HCO1 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_Phone__c</fullName>
        <description>PC HCO Phone 1</description>
        <label>HCO1 Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_State__c</fullName>
        <description>The state of the second HCO’s address.</description>
        <label>HCO1 State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_Street_Address1__c</fullName>
        <description>The address of the second HCO.</description>
        <label>HCO1 Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO1_Type__c</fullName>
        <description>The type of second HCO - Clinic, Private Practice, Hospital, Long Term Care Facility, and Other.</description>
        <label>HCO1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_HCO_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HCO1_Zipcode__c</fullName>
        <description>The zip code of the second HCO’s address.</description>
        <label>HCO1 Zipcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_City__c</fullName>
        <description>The city associated with the third HCO’s address.</description>
        <label>HCO2 City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_Fax__c</fullName>
        <description>The fax number of the third HCO.</description>
        <label>HCO2 Fax</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_Name__c</fullName>
        <description>The full name of the third HCO.</description>
        <label>HCO2 Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_Phone__c</fullName>
        <description>The phone number of the third HCO.</description>
        <label>HCO2 Phone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_State__c</fullName>
        <description>The state of the third HCO’s address.</description>
        <label>HCO2 State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_Street_Address1__c</fullName>
        <description>The address of the third HCO.</description>
        <label>HCO2 Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO2_Type__c</fullName>
        <description>The type of third HCO - Clinic, Private Practice, Hospital, Long Term Care Facility, and Other.</description>
        <label>HCO2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_HCO_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HCO2_Zipcode__c</fullName>
        <description>The zip code of the third HCO’s address.</description>
        <label>HCO2 Zipcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_City__c</fullName>
        <description>The city associated with the first HCO’s address.</description>
        <label>HCO City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_Fax__c</fullName>
        <description>The fax number of the first HCO.</description>
        <label>HCO Fax</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_Name__c</fullName>
        <description>Name of the HCO</description>
        <label>HCO Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_Phone__c</fullName>
        <description>The phone number of the first HCO.</description>
        <label>HCO Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_HCO_State__c</fullName>
        <description>The state of the first HCO’s address.</description>
        <label>HCO State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_Street_Address1__c</fullName>
        <description>The address of the first HCO.</description>
        <label>HCO Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HCO_Type__c</fullName>
        <description>The type of the first HCO - Clinic, Private Practice, Hospital, Long Term Care Facility, and Other.</description>
        <label>HCO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Private Practice</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Long Term Care Facility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HCO_Zipcode__c</fullName>
        <description>The zip code of the first HCO’s address.</description>
        <label>HCO Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Cardholder_Employer__c</fullName>
        <description>&apos;he employer of the card holder for Health Plan 2.</description>
        <label>HP1 Cardholder Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Cardholder_ID_Policy_No__c</fullName>
        <label>HP1 Cardholder ID Policy No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Cardholder_Name__c</fullName>
        <description>The name of the person for whom the card is issued for Health Plan 2.</description>
        <label>HP1 Cardholder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Cardholder_Rel_to_Patient__c</fullName>
        <description>The relationship of the cardholder to the patient for Health Plan 2.</description>
        <label>HP1 Cardholder Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP1_Cardholder_s_Date_of_Birth__c</fullName>
        <description>The card holder&apos;s date of birth for Health Plan 2.</description>
        <label>HP1 Cardholder&apos;s Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Effective_Date__c</fullName>
        <description>The date on which the plan came into effect for Health Plan 2.</description>
        <label>HP1 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Expiration_Date__c</fullName>
        <description>The health plan expiration date for Health Plan 2.</description>
        <label>HP1 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Group_No__c</fullName>
        <description>The Group Number of the private insurance for Health Plan 2.</description>
        <label>HP1 Group No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_ID_Policy_No__c</fullName>
        <description>The Identification Number / Policy Number of the private insurance for Health Plan 2.</description>
        <label>HP1 ID / Policy No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Payer_Name__c</fullName>
        <description>The organization that provides reimbursement for Health Plan 2. 
Note: The organization may be a private insurance company or public (government) organization.</description>
        <label>HP1 Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Plan_Status__c</fullName>
        <description>The status of the health plan for Health Plan 2.</description>
        <label>HP1 Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP1_Plan_Type__c</fullName>
        <description>The primary, secondary, or tertiary health plan for the patient for Health Plan 2.</description>
        <label>HP1 Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP1_Record_Type__c</fullName>
        <description>The type of health plan the patient has access to, for Health Plan 2. For example, Private or Public.</description>
        <label>HP1 Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Health Plan</fullName>
                </value>
                <value>
                    <fullName>Public Health Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP1_Rx_Bin__c</fullName>
        <description>The six-digit number that health plans can use to process electronic pharmacy claims for Health Plan 2.</description>
        <label>HP1 Rx Bin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Rx_Grp__c</fullName>
        <description>The group number for Pharmacy Benefits Claims for Health Plan 2.</description>
        <label>HP1 Rx Grp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP1_Rx_PCN__c</fullName>
        <description>PCN for Pharmacy Benefits Claims for Health Plan 2.</description>
        <label>HP1 Rx PCN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Cardholder_Employer__c</fullName>
        <description>The employer of the card holder for Health Plan 3.</description>
        <label>HP2 Cardholder Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Cardholder_ID_Policy_No__c</fullName>
        <label>HP2 Cardholder ID Policy No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Cardholder_Name__c</fullName>
        <description>The name of the person for whom the card is issued for Health Plan 3.</description>
        <label>HP2 Cardholder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Cardholder_Rel_to_Patient__c</fullName>
        <description>The relationship of the cardholder to the patient for Health Plan 3.</description>
        <label>HP2 Cardholder Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP2_Cardholder_s_Date_of_Birth__c</fullName>
        <description>The card holder&apos;s date of birth for Health Plan 3.</description>
        <label>HP2 Cardholder&apos;s Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Effective_Date__c</fullName>
        <description>The date on which the plan came into effect for Health Plan 3.</description>
        <label>HP2 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Expiration_Date__c</fullName>
        <description>The health plan expiration date for Health Plan 3.</description>
        <label>HP2 Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Group_No__c</fullName>
        <description>The group number of the private insurance for Health Plan 3.</description>
        <label>HP2 Group No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_ID_Policy_No__c</fullName>
        <description>The Identification Number / Policy Number of the private insurance for Health Plan 3.</description>
        <label>HP2 ID / Policy No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Payer_Name__c</fullName>
        <description>The organization that provides reimbursement for Health Plan 3. 
Note: The organization may be a private insurance company or public (government) organization.</description>
        <label>HP2 Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Plan_Status__c</fullName>
        <description>The health plan status for Health Plan 3.</description>
        <label>HP2 Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP2_Plan_Type__c</fullName>
        <description>The primary, secondary, or tertiary health plan for the patient for Health Plan 3.</description>
        <label>HP2 Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP2_Record_Type__c</fullName>
        <description>The type of health plan the patient has access to, for Health Plan 2. For example, Private or Public.</description>
        <label>HP2 Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private Health Plan</fullName>
                </value>
                <value>
                    <fullName>Public Health Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP2_Rx_Bin__c</fullName>
        <description>The six-digit number that health plans can use to process electronic pharmacy claims for Health Plan 3.</description>
        <label>HP2 Rx Bin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Rx_Grp__c</fullName>
        <description>The group number for the pharmacy benefits claims for Health Plan 3.</description>
        <label>HP2 Rx Grp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP2_Rx_PCN__c</fullName>
        <description>PCN for Pharmacy Benefits Claims for Health Plan 3.</description>
        <label>HP2 Rx PCN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Cardholder_Employer__c</fullName>
        <description>The employer of the card holder for Health Plan 1.</description>
        <label>HP Cardholder Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Cardholder_ID_Policy_No__c</fullName>
        <label>HP Cardholder ID Policy No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Cardholder_Name__c</fullName>
        <description>The name of the person for whom the card is issued for Health Plan 1.</description>
        <label>HP Cardholder Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Cardholder_Rel_to_Patient__c</fullName>
        <description>The relationship of the cardholder to the patient for Health Plan 1.</description>
        <label>HP Cardholder Relationship to Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Cardholder_Relationship_to_Patient</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP_Cardholder_s_Date_of_Birth__c</fullName>
        <description>The card holder&apos;s date of birth for Health Plan 1.</description>
        <label>HP Cardholder&apos;s Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP_Effective_Date__c</fullName>
        <description>The date on which the plan came into effect for Health Plan 1.</description>
        <label>HP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP_Expiration_Date__c</fullName>
        <description>The Health Plan expiration date for Health Plan 1.</description>
        <label>HP Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_HP_Group_No__c</fullName>
        <description>The Group Number of the private insurance for Health Plan 1.</description>
        <label>HP Group No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_ID_Policy_No__c</fullName>
        <description>The Identification Number/ Policy Number of the private insurance for Health Plan 1.</description>
        <label>HP ID / Policy No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>